# MathExtrusion

./: .gitignore  .gitmodules  README.md
Extrusion/AMBER/: CMakeLists.txt
Extrusion/AMBER/Header/: GameEngine.hpp
Extrusion/AMBER/Header/Debug/: Debug.hpp
Extrusion/AMBER/Header/Extrusion/: CourbeType.hpp  ExtrusionManager.hpp  ExtrusionScene.hpp
Extrusion/AMBER/Header/Interface/: Component.hpp  ImguiBlock.hpp  Initializer.hpp  SwapChainRecreate.hpp
Extrusion/AMBER/Header/Miscellaneous/: Time.hpp
Extrusion/AMBER/Header/Physics/: CollisionBody.hpp  CollisionShape.hpp  Muscle.hpp  PhysicsEngine.hpp  RigidBody.hpp
Extrusion/AMBER/Header/Rendering/: RenderingEngine.hpp
Extrusion/AMBER/Header/Rendering/Buffer/: BufferManager.hpp  CommandBuffer.hpp
Extrusion/AMBER/Header/Rendering/Camera/: Camera.hpp  CameraManager.hpp  FlyCamera.hpp
Extrusion/AMBER/Header/Rendering/Descriptor/: ComputeBuffer.hpp  Descriptor.hpp  Manager.hpp
Extrusion/AMBER/Header/Rendering/Devices/: LogicalDevice.hpp  PhysicalDevices.hpp
Extrusion/AMBER/Header/Rendering/Graphics/: ColorResources.hpp  DepthResources.hpp  FrameBuffers.hpp
Extrusion/AMBER/Header/Rendering/ImGUI/: Console.hpp  ConsoleDebug.hpp  EngineInfo.hpp  Hiearchy.hpp  Hud.hpp  implot.h  implot_internal.h
Extrusion/AMBER/Header/Rendering/Light/: DirectionalLight.hpp  LightManager.hpp  Lights.hpp  PointLight.hpp  Shadow.hpp  ShadowManager.hpp  SpotLight.hpp
Extrusion/AMBER/Header/Rendering/Materials/: MaterialManager.hpp  Materials.hpp  TextureCubeMap.hpp  TextureManager.hpp  Textures.hpp
Extrusion/AMBER/Header/Setting/: SettingManager.hpp
Extrusion/AMBER/Header/Struct/: GraphiquePipelineElement.hpp  LightData.hpp  PointeurClass.hpp  PushConstantShadow.hpp  PushConstants.hpp  QueueFamilyIndices.hpp  SettingInfo.hpp  ShaderElement.hpp  ShadowMatrix.hpp  SwapChainSupportDetails.hpp  Transform.hpp  UniformBufferCamera.hpp  UniformBufferDiver.hpp  UniformBufferLight.hpp  UniformBufferMaterial.hpp  UniformBufferObject.hpp  Version.hpp  VertexVulkan.hpp  VmaBuffer.hpp  VmaBufferImage.hpp  VulkanCommandeBufferMisc.hpp  VulkanDescriptor.hpp  VulkanDeviceMisc.hpp  VulkanMisc.hpp  VulkanSwapChainMisc.hpp  VulkanSynchronisation.hpp
Extrusion/AMBER/Header/User/: Behaviour.hpp  BehaviourManager.hpp  Scene.hpp  SceneManager.hpp
Extrusion/AMBER/Source/: GameEngine.cpp
Extrusion/AMBER/Source/Debug/: Debug.cpp
Extrusion/AMBER/Source/Extrusion/: ExtrusionManager.cpp  ExtrusionScene.cpp
Extrusion/AMBER/Source/Miscellaneous/: Time.cpp
Extrusion/AMBER/Source/Physics/: CollisionBody.cpp  CollisionShape.cpp  Muscle.cpp  PhysicsEngine.cpp  RigidBody.cpp
Extrusion/AMBER/Source/Rendering/: RenderingEngine.cpp
Extrusion/AMBER/Source/Setting/: SettingManager.cpp
Extrusion/AMBER/Source/Test/: Main.cpp
Extrusion/AMBER/Source/User/: BehaviourManager.cpp  SceneManager.cpp
(+96 files in other folders)
